[package]
name = "spikefit"
version = "0.1.1"
edition = "2024"
description = "Peak detection for 1D signals"
readme = "./README.md"
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/spikefit"
keywords = ["peaks", "peak-detection", "signal-processing", "dsp"]
categories = ["science", "algorithms"]
homepage = "https://github.com/awxkee/spikefit"
repository = "https://github.com/awxkee/spikefit.git"
exclude = ["*.jpg", "./assets/*", "*.png"]
rust-version = "1.89.0"
include = ["/src/", "/README.md", "/LICENSE.md", "/LICENSE-APACHE.md"]

[dependencies]
num-traits = "0.2.19"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
